[package]
name = "shellkey-authd"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ssh_agent = { git = "https://github.com/ntrippar/ssh-agent", rev = "d3b34af6f4475cbc2257c8f800ea5b3d997a1720" }
parking_lot = "0.11"
base64 = "0.13"
sha2 = "0.9"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
